[package]
name = "rust-cr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
image = "0.24.1"
rand = "0.8.5"

[dependencies.windows]
version = "0.33.0"
features = [
	"Win32_System_Console",
	"Win32_Foundation",
	"Win32_UI_Input_KeyboardAndMouse"
]
